--- a/overlay/Base.lproj/Main.storyboard
+++ b/overlay/Base.lproj/Main.storyboard
@@ -250,6 +250,7 @@
                         <outlet property="topicHeaderView" destination="Gcv-s4-oBX" id="MmS-2C-bs8"/>
                         <outlet property="topicNameLabel" destination="2LG-tZ-QJ9" id="P4j-sJ-U0A"/>
                         <segue destination="31S-nr-XOm" kind="modal" identifier="lessonSegue" id="g2q-6H-mT5"/>
+                        <segue destination="BYZ-38-t0r" kind="modal" identifier="backHomeSegue" id="Ecr-jb-ig0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZIv-Wx-K7b" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1961,6 +1962,7 @@
         <image name="flag" width="24" height="33"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="Ecr-jb-ig0"/>
         <segue reference="eb9-DC-HH6"/>
     </inferredMetricsTieBreakers>
 </document>
